objects/Laser_Billing_Info__c.object
<CustomObject>
    <description>Used by Laser group to log billing for clients</description>
    <fields>
        <fullName>ACT_Create_Date__c</fullName>
        <label>ACT Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_Modified_Date__c</fullName>
        <label>ACT Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <label>C#</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Notified_ADP__c</fullName>
        <label>Client Notified ADP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Lines_Called_a_Loss__c</fullName>
        <label>Contract Lines Called a Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_not_Available__c</fullName>
        <label>DMS not Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LBT_Notified__c</fullName>
        <label>LBT Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loss_Date__c</fullName>
        <label>Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <description>Loss Reason</description>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Type__c</fullName>
        <description>Loss Type</description>
        <label>Loss Type</label>
        <picklist>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modifier_Table__c</fullName>
        <description>The purpose is to indicate which Oracle table a given Ship-to CMF is tied to due to “exceptions” in certain billing models.</description>
        <label>Modifier Table</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Printers_Contracted__c</fullName>
        <label>Number of Printers Contracted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Printers_Returned__c</fullName>
        <label>Number of Printers Returned</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Printers_to_be_Returned__c</fullName>
        <label>Number of Printers to be Returned</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Toner_Notified__c</fullName>
        <description>Paper/Toner Notified</description>
        <label>Paper/Toner Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pick_up_ETA__c</fullName>
        <label>Pick-up ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Poller_CMF__c</fullName>
        <label>Poller CMF#</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poller_Profiles_Deleted__c</fullName>
        <label>Poller Profiles Deleted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Poller_Records_Updated_Verified__c</fullName>
        <description>Poller Records Updated/Verified</description>
        <label>Poller Records Updated/Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Date__c</fullName>
        <label>RMA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA#</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLF_Deleted__c</fullName>
        <label>SLF Deleted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_CMF_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ship-To CMF Name</description>
        <label>Ship-To CMF Name</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipLabel>Laser Billing Info</relationshipLabel>
        <relationshipName>R00N40000001m7zIEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_CMF__c</fullName>
        <description>Ship-To CMF</description>
        <formula>Ship_To_CMF_Name__r.Ship_CMF__c</formula>
        <label>Ship-To CMF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Contract Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending SSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick Up Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick Up Scheduled/RMA Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on AR Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated_Verified_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LBT users only</description>
        <inlineHelpText>You can only search for LBT users.</inlineHelpText>
        <label>Updated/Verified by</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>You can only search for LBT users.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ADPDS - Laser - LBT</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ADPDS - Laser Admn</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Billing_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Laser Billing Info</label>
    <listViews>
        <fullName>All_Laser_Billing_Info</fullName>
        <columns>NAME</columns>
        <columns>Ship_To_CMF_Name__c</columns>
        <columns>C__c</columns>
        <columns>Poller_CMF__c</columns>
        <columns>Poller_Records_Updated_Verified__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Laser Billing Info</label>
    </listViews>
    <nameField>
        <displayFormat>LBI -{00000}</displayFormat>
        <label>Billing Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laser Billing Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Append_a_C</fullName>
        <active>false</active>
        <description>C# must start with a &quot;C&quot;</description>
        <errorConditionFormula>NOT(  OR( REGEX( C__c , &quot;[C]{1}[0-9]{6}&quot; ), 
REGEX(C__c , &quot;[c]{1}[0-9]{6}&quot;),
REGEX(C__c , &quot;[C]{1}[0-9]{5}&quot;),
REGEX(C__c , &quot;[c]{1}[0-9]{5}&quot;),
REGEX(C__c , &quot;[C]{1}[0-9]{4}&quot;),
REGEX(C__c , &quot;[c]{1}[0-9]{4}&quot;),
REGEX(C__c , &quot;[c]{1}[0-9]{3}&quot;),
REGEX(C__c , &quot;[C]{1}[0-9]{3}&quot;),
REGEX(C__c , &quot;[c]{1}[0-9]{2}&quot;),
REGEX(C__c , &quot;[C]{1}[0-9]{2}&quot;),
REGEX(C__c , &quot;[c]{1}[0-9]{1}&quot;),
REGEX(C__c , &quot;[C]{1}[0-9]{1}&quot;)))</errorConditionFormula>
        <errorDisplayField>C__c</errorDisplayField>
        <errorMessage>The entry must start with the letter C</errorMessage>
    </validationRules>
</CustomObject>